# avl_micro_climate

./: .env.example  .gitignore  PLAN.md  pyproject.toml  requirements.txt
app/: app.py
app/components/: data_loader.py  frost_analysis.py  geocoder.py  map_builder.py  plotting.py
config/: data_sources.py  settings.py
data/output/frost_climatology/: last_frost_dates_400m.npz
scripts/: build_frost_climatology.py  build_nmme_reforecasts.py  build_seasonal_frost_forecast.py  downsample_for_deploy.py  plot_gbm_importance.py  plot_pdp.py  plot_spring_frost_free.py  precompute_last_frost.py  predict_point_timeseries.py  predict_tmin_map.py  rebuild_expanded_area.py  run_after_covariates.sh  test_tukey_filter.py
src/data/: download_dem.py  download_gridded.py  download_gridmet.py  download_hls_ndvi.py  download_nlcd.py  download_nmme.py  download_satellite.py  download_stations.py  filter_ecostress.py
src/model/: cross_validation.py  random_forest.py
src/postprocessing/: frost_climatology.py
src/preprocessing/: align_grids.py  climatology.py  ecostress_composites.py  frost_dates.py  ndvi_composites.py  nlcd_covariates.py  prepare_training.py  sky_view_factor.py  terrain.py
src/visualization/: ecostress_maps.py  eda_residuals.py  gridmet_maps.py  static_maps.py
